[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1"]

[node name="MainMenu" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
mouse_filter = 2
text = "GAME PIKANAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
mouse_filter = 2
text = "Creature RPG on Monad"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
mouse_filter = 2

[node name="StartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
text = "New Game"

[node name="ContinueBtn" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 40)
text = "Continue"

[node name="WalletBtn" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 40)
text = "Connect Wallet"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
text = "Quit"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
mouse_filter = 2

[node name="WalletLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(200, 20)
mouse_filter = 2
text = ""
horizontal_alignment = 1
